RESOLVED FIXED185885
Setting drawsBackground to YES on a WKView doesn't take effect immediately
https://bugs.webkit.org/show_bug.cgi?id=185885
Summary Setting drawsBackground to YES on a WKView doesn't take effect immediately
Timothy Hatcher
Reported 2018-05-22 13:56:29 PDT
Attachments
Patch (12.13 KB, patch)
2018-05-22 14:22 PDT, Timothy Hatcher
no flags
Archive of layout-test-results from ews103 for mac-sierra (2.65 MB, application/zip)
2018-05-22 15:22 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews115 for mac-sierra (3.22 MB, application/zip)
2018-05-22 16:02 PDT, EWS Watchlist
no flags
Patch (11.42 KB, patch)
2018-05-23 10:29 PDT, Timothy Hatcher
no flags
Patch (11.42 KB, patch)
2018-05-23 10:55 PDT, Timothy Hatcher
no flags
Archive of layout-test-results from webkit-cq-01 for mac-sierra (2.36 MB, application/zip)
2018-05-23 12:09 PDT, WebKit Commit Bot
no flags
Patch (11.85 KB, patch)
2018-05-25 16:34 PDT, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2018-05-22 14:22:18 PDT
EWS Watchlist
Comment 2 2018-05-22 15:22:02 PDT
Comment on attachment 341024 [details] Patch Attachment 341024 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/7769488 New failing tests: fast/borders/border-radius-on-html.html css3/blending/blend-mode-html-element-screen.html
EWS Watchlist
Comment 3 2018-05-22 15:22:04 PDT
Created attachment 341037 [details] Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4 2018-05-22 16:02:34 PDT
Comment on attachment 341024 [details] Patch Attachment 341024 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/7769720 New failing tests: fast/borders/border-radius-on-html.html css3/blending/blend-mode-html-element-screen.html
EWS Watchlist
Comment 5 2018-05-22 16:02:35 PDT
Created attachment 341039 [details] Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
Timothy Hatcher
Comment 6 2018-05-22 19:13:59 PDT
(In reply to Build Bot from comment #2) > Comment on attachment 341024 [details] > Patch > > Attachment 341024 [details] did not pass mac-ews (mac): > Output: http://webkit-queues.webkit.org/results/7769488 > > New failing tests: > fast/borders/border-radius-on-html.html > css3/blending/blend-mode-html-element-screen.html These tests fail for me without my patch. Hmm.
Timothy Hatcher
Comment 7 2018-05-23 10:29:55 PDT
Timothy Hatcher
Comment 8 2018-05-23 10:31:39 PDT
Comment on attachment 341103 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341103&action=review > Source/WebCore/ChangeLog:24 > + instead of hadcoding white. Typo, will fix.
Simon Fraser (smfr)
Comment 9 2018-05-23 10:40:03 PDT
Comment on attachment 341103 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341103&action=review > Source/WebCore/page/FrameView.cpp:2938 > + if (view->needsLayout()) > + view->layoutContext().scheduleLayout(); It's sad that you have to do this.
Timothy Hatcher
Comment 10 2018-05-23 10:55:43 PDT
WebKit Commit Bot
Comment 11 2018-05-23 12:09:52 PDT
Comment on attachment 341107 [details] Patch Rejecting attachment 341107 [details] from commit-queue. New failing tests: fast/borders/border-radius-on-html.html css3/blending/blend-mode-html-element-screen.html Full output: http://webkit-queues.webkit.org/results/7779151
WebKit Commit Bot
Comment 12 2018-05-23 12:09:54 PDT
Created attachment 341112 [details] Archive of layout-test-results from webkit-cq-01 for mac-sierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-sierra Platform: Mac OS X 10.12.6
Timothy Hatcher
Comment 13 2018-05-25 16:34:11 PDT
WebKit Commit Bot
Comment 14 2018-05-25 17:13:49 PDT
Comment on attachment 341351 [details] Patch Clearing flags on attachment: 341351 Committed r232218: <https://trac.webkit.org/changeset/232218>
WebKit Commit Bot
Comment 15 2018-05-25 17:13:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.